--- a/index.html
+++ b/index.html
@@ -565,11 +565,18 @@
           </div>
         </div>
       </header>
+      <div id="floatingPreviewPlaceholder" class="floating-preview-placeholder" hidden>
+        <h3>Espacio flotante activo</h3>
+        <p>Herramientas y previsualización están abiertas en dos ventanas independientes.</p>
+        <div class="button-row">
+          <button id="restoreFloatingWorkspaceBtn" type="button">Volver a acoplar las dos ventanas</button>
+        </div>
+      </div>
       <iframe id="previewFrame" title="Previsualización eXe" src="app/preview.html" sandbox="allow-same-origin allow-scripts"></iframe>
     </main>
   </div>
   <footer class="app-footer">
-    <p>v 0.4.0 · © <a href="https://bilateria.org" target="_blank" rel="noopener noreferrer">Juan José de Haro</a> · <a href="https://www.gnu.org/licenses/agpl-3.0.html" target="_blank" rel="noopener noreferrer">Licencia AGPLv3</a> · <a href="https://github.com/jjdeharo/editor-estilos" target="_blank" rel="noopener noreferrer">Repositorio GitHub</a> · <a href="https://github.com/jjdeharo/editor-estilos/issues" target="_blank" rel="noopener noreferrer">Problemas y sugerencias</a></p>
+    <p>v 0.4.1 · © <a href="https://bilateria.org" target="_blank" rel="noopener noreferrer">Juan José de Haro</a> · <a href="https://www.gnu.org/licenses/agpl-3.0.html" target="_blank" rel="noopener noreferrer">Licencia AGPLv3</a> · <a href="https://github.com/jjdeharo/editor-estilos" target="_blank" rel="noopener noreferrer">Repositorio GitHub</a> · <a href="https://github.com/jjdeharo/editor-estilos/issues" target="_blank" rel="noopener noreferrer">Problemas y sugerencias</a></p>
   </footer>
 
   <script src="vendor/jszip.min.js"></script>
