Permitir guardar ELPX sin renombrar y mostrar aviso de eliminación previa

--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@
   <div id="exportRenameModal" class="modal-backdrop" hidden>
     <div class="modal-card modal-card-centered rename-modal-card" role="dialog" aria-modal="true" aria-labelledby="exportRenameTitle">
       <h3 id="exportRenameTitle">Guardar ELPX: cambiar nombre del estilo</h3>
-      <p class="status-inline">Para que eXeLearning detecte este estilo como nuevo, cambia <strong>Nombre</strong> y <strong>Título</strong>.</p>
+      <p class="status-inline">Si quieres que eXeLearning lo detecte como estilo nuevo, cambia <strong>Nombre</strong> y <strong>Título</strong>. Si no los cambias, podrás guardarlo igualmente, pero tendrás que eliminar antes el estilo anterior en eXeLearning.</p>
       <div class="inline-two click-edit-grid">
         <label>Nombre del estilo
           <input id="exportRenameNameInput" type="text" />
