--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Editor de estilos eXeLearning (v3 y superiores)</title>
+  <title>EdEX</title>
+  <link rel="icon" type="image/svg+xml" href="app/favicon.svg" />
   <link rel="stylesheet" href="app/styles.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.11.1/styles/github.min.css" />
 </head>
@@ -16,7 +17,7 @@
     <aside id="editorPanel" class="editor-panel">
       <header class="panel-header">
         <div class="panel-header-top">
-          <h1 data-i18n="header.title">Editor de estilos eXeLearning (v3 y superiores)</h1>
+          <h1><img class="app-title-logo" src="app/favicon.svg" alt="" aria-hidden="true" /><span data-i18n="header.title">EdEX</span></h1>
           <label id="appLanguageWrap" class="lang-select-wrap" for="appLanguageSelect">
             <span data-i18n="language.label">Idioma</span>
             <select id="appLanguageSelect">
@@ -26,7 +27,7 @@
             </select>
           </label>
         </div>
-        <p data-i18n="header.subtitle">Carga una plantilla oficial o un ZIP, edita y exporta.</p>
+        <p data-i18n="header.subtitle">Editor de estilos de eXeLearning</p>
       </header>
 
       <nav class="tabs" aria-label="Secciones">
@@ -669,7 +670,7 @@
     </div>
   </div>
   <footer class="app-footer">
-    <p>v 1.0.0-beta.4 · © <a href="https://bilateria.org" target="_blank" rel="noopener noreferrer">Juan José de Haro</a> · <a href="https://www.gnu.org/licenses/agpl-3.0.html" target="_blank" rel="noopener noreferrer" data-i18n="footer.license">Licencia AGPLv3</a> · <a href="https://github.com/jjdeharo/editor-estilos" target="_blank" rel="noopener noreferrer" data-i18n="footer.repo">Repositorio GitHub</a> · <a href="https://github.com/jjdeharo/editor-estilos/issues" target="_blank" rel="noopener noreferrer" data-i18n="footer.issues">Problemas y sugerencias</a></p>
+    <p>v 1.0.0-beta.5 · © <a href="https://bilateria.org" target="_blank" rel="noopener noreferrer">Juan José de Haro</a> · <a href="https://www.gnu.org/licenses/agpl-3.0.html" target="_blank" rel="noopener noreferrer" data-i18n="footer.license">Licencia AGPLv3</a> · <a href="https://github.com/jjdeharo/editor-estilos" target="_blank" rel="noopener noreferrer" data-i18n="footer.repo">Repositorio GitHub</a> · <a href="https://github.com/jjdeharo/editor-estilos/issues" target="_blank" rel="noopener noreferrer" data-i18n="footer.issues">Problemas y sugerencias</a></p>
   </footer>
 
   <script src="app/lang/en.js"></script>
